feat(category): improve category save flow and validation
This commit introduces several improvements to the category save flow:

- Adds an EditorConfig file for consistent code formatting.
- Refactors the category save flow to use a factory for creating the flow.
- Implements validation for the CategorySaveDto using Jakarta Validation.
- Adds a new ValidatorUtil class for validating DTOs.
- Improves the ShellHelper class to provide better error, success, and warning messages.
- Modifies the CategoryService to use the new validation and flow factory.
- Updates the CategoryCommand to use the new ShellHelper methods.
- Adds a new CategorySaveFlowParam class to hold the parameters for the category save flow.
- Updates the CategoryRepository to exclude 'Atar' category when retrieving category items.
- Adds validation annotations to PrimeSaveDto and CategorySaveDto.